Added 6 indicators to be retrieved by WB importer

--- a/WorldBank_Importer/config/configuration-WB-HN.ini
+++ b/WorldBank_Importer/config/configuration-WB-HN.ini
@@ -15,10 +15,16 @@ World Bank - Health and Nutrition Indicators = HN_indicators
 [HN_indicators]
 prevalence of hiv, total (% of population ages 15-49) = SH.DYN.AIDS.ZS
 mortality rate, under-5 (per 1,000 live births) = SH.DYN.MORT
-Improved water source (% of population with access) = SH.H2O.SAFE.ZS
-Improved water source, rural (% of rural population with access) = SH.H2O.SAFE.RU.ZS
-Improved water source, urban (% of urban population with access) = SH.H2O.SAFE.UR.ZS
 malnutrition prevalence, height for age (% of children under 5) = SH.STA.STNT.ZS
+;Improved water source (% of population with access) = SH.H2O.SAFE.ZS
+;Improved water source, rural (% of rural population with access) = SH.H2O.SAFE.RU.ZS
+;Improved water source, urban (% of urban population with access) = SH.H2O.SAFE.UR.ZS
+People using safely managed drinking water services (% of population) = SH.H2O.SMDW.ZS
+People using safely managed drinking water services, rural (% of rural population) = SH.H2O.SMDW.RU.ZS
+People using safely managed drinking water services, urban (% of urban population) = SH.H2O.SMDW.UR.ZS
+People using at least basic drinking water services (% of population) = SH.H2O.BASW.ZS
+People using at least basic drinking water services, rural (% of rural population) = SH.H2O.BASW.RU.ZS
+People using at least basic drinking water services, urban (% of urban population) = SH.H2O.BASW.UR.ZS
 
 
 [SH.DYN.AIDS.ZS]
@@ -98,3 +104,89 @@ name_fr = Prévalence de la malnutrition, taille selon l’âge
 desc_en = Prevalence of child malnutrition is the percentage of children under age 5 whose height for age (stunting) is more than two standard deviations below the median for the international reference population ages 0-59 months. For children up to two years old height is measured by recumbent length. For older children height is measured by stature while standing.
 desc_es = La prevalencia de la desnutrición en la niñez representa el porcentaje de niños menores de cinco años de edad con un peso para la edad correspondiente (crecimiento insuficiente) más de dos desviaciones estándar por debajo de la mediana de la población internacional de referencia de entre 0 y 59 meses de edad. En el caso de los niños de hasta dos años, la altura es la longitud en posición decúbito. En niños mayores, la altura es la estatura en posición vertical.
 desc_fr = La prévalence de la malnutrition des enfants est le pourcentage des enfants de moins de cinq ans dont la taille, en fonction de leur âge (arrêt de la croissance), est inférieur de plus de deux fois l'écart-type à la médiane pour la population internationale de référence d'âge correspondant. La taille des enfants de moins de deux ans est mesurée à la longueur en position allongée. La taille des enfants plus vieux est mesurée en position debout.
+
+
+[SH.H2O.SMDW.ZS]
+indicator_id = SH.H2O.DMDW.ZS
+indicator_topic = LAND_USE
+indicator_tendency = INCREASE
+indicator_unit_name = FIXME
+indicator_unit_type = %
+name_en = People using safely managed drinking water services (% of population)
+name_es = FIXME
+name_fr = FIXME
+desc_en = FIXME
+desc_fr = FIXME
+desc_es = FIXME
+
+
+[SH.H2O.SMDW.RU.ZS]
+indicator_id = SH.H2O.DMDW.RU.ZS
+indicator_topic = LAND_USE
+indicator_tendency = INCREASE
+indicator_unit_name = FIXME
+indicator_unit_type = %
+name_en = People using safely managed drinking water services, rural (% of rural population)
+name_es = FIXME
+name_fr = FIXME
+desc_en = FIXME
+desc_fr = FIXME
+desc_es = FIXME
+
+
+[SH.H2O.SMDW.UR.ZS]
+indicator_id = SH.H2O.DMDW.UR.ZS
+indicator_topic = LAND_USE
+indicator_tendency = INCREASE
+indicator_unit_name = FIXME
+indicator_unit_type = %
+name_en = People using safely managed drinking water services, urban (% of urban population)
+name_es = FIXME
+name_fr = FIXME
+desc_en = FIXME
+desc_fr = FIXME
+desc_es = FIXME
+
+
+
+[SH.H2O.BASW.ZS]
+indicator_id = SH.H2O.BASW.ZS
+indicator_topic = LAND_USE
+indicator_tendency = INCREASE
+indicator_unit_name = FIXME
+indicator_unit_type = %
+name_en = People using at least basic drinking water services (% of population)
+name_es = FIXME
+name_fr = FIXME
+desc_en = FIXME
+desc_fr = FIXME
+desc_es = FIXME
+
+
+[SH.H2O.BASW.RU.ZS]
+indicator_id = SH.H2O.BASW.RU.ZS
+indicator_topic = LAND_USE
+indicator_tendency = INCREASE
+indicator_unit_name = FIXME
+indicator_unit_type = %
+name_en = People using at least basic drinking water services, rural (% of rural population)
+name_es = FIXME
+name_fr = FIXME
+desc_en = FIXME
+desc_fr = FIXME
+desc_es = FIXME
+
+
+[SH.H2O.BASW.UR.ZS]
+indicator_id = SH.H2O.BASW.UR.ZS
+indicator_topic = LAND_USE
+indicator_tendency = INCREASE
+indicator_unit_name = FIXME
+indicator_unit_type = %
+name_en = People using at least basic drinking water services, urban (% of urban population)
+name_es = FIXME
+name_fr = FIXME
+desc_en = FIXME
+desc_fr = FIXME
+desc_es = FIXME
+
