--- a/WorldBank_Importer/config/configuration-WB-HN.ini
+++ b/WorldBank_Importer/config/configuration-WB-HN.ini
@@ -107,7 +107,7 @@ desc_fr = La prévalence de la malnutrition des enfants est le pourcentage des e
 
 
 [SH.H2O.SMDW.ZS]
-indicator_id = SH.H2O.DMDW.ZS
+indicator_id = SH.H2O.SMDW.ZS
 indicator_topic = LAND_USE
 indicator_tendency = INCREASE
 indicator_unit_name = FIXME
@@ -121,7 +121,7 @@ desc_es = FIXME
 
 
 [SH.H2O.SMDW.RU.ZS]
-indicator_id = SH.H2O.DMDW.RU.ZS
+indicator_id = SH.H2O.SMDW.RU.ZS
 indicator_topic = LAND_USE
 indicator_tendency = INCREASE
 indicator_unit_name = FIXME
@@ -135,7 +135,7 @@ desc_es = FIXME
 
 
 [SH.H2O.SMDW.UR.ZS]
-indicator_id = SH.H2O.DMDW.UR.ZS
+indicator_id = SH.H2O.SMDW.UR.ZS
 indicator_topic = LAND_USE
 indicator_tendency = INCREASE
 indicator_unit_name = FIXME
