--- a/FAOSTAT-Norm_Importer/config/configuration-ASTI_Researchers.ini
+++ b/FAOSTAT-Norm_Importer/config/configuration-ASTI_Researchers.ini
@@ -1,5 +1,5 @@
 [FAOSTAT]
-zip_url = http://fenixservices.fao.org/faostat/static/bulkdownloads/ASTI_Researchers_E_All_Data_(Norm).zip
+zip_url = http://fenixservices.fao.org/faostat/static/bulkdownloads/ASTI_Researchers_E_All_Data_(Normalized).zip
 zip_file_path = ./downloaded_data/ASTI_Researchers.zip
 data_file_path = ./downloaded_data/ASTI_Researchers_extracted
 
