changed config files in order to retrieve new suite of indicators from FAO Food Security dataset

--- a/FAOSTAT-Norm_Importer/config/configuration-Food_security_2011suite.ini
+++ b/FAOSTAT-Norm_Importer/config/configuration-Food_security_2011suite.ini
@@ -10,7 +10,7 @@ first_valid_year = 1000
 result_file_path = ./downloaded_data/info_indicators.txt
 
 [TRANSLATOR]
-indicator_names_valid_path = ./config/indicator_codes-Food_security.txt
+indicator_names_valid_path = ./config/indicator_codes-Food_security_2011suite.txt
 historical_mode = True
 obs_int = 1411
 sli_int = 0
@@ -19,25 +19,25 @@ igr_int = 0
 
 [DATASOURCE]
 name = FAO - Statistics Division
-datasource_id = FS
+datasource_id = FS.2011
 
 [INDICATORS]
-codes = ["INDICATOR_1","INDICATOR_2","INDICATOR_3","INDICATOR_4","INDICATOR_5","INDICATOR_6","INDICATOR_7","INDICATOR_8","INDICATOR_9","INDICATOR_10","INDICATOR_11","INDICATOR_12","INDICATOR_13","INDICATOR_14","INDICATOR_15","INDICATOR_16","INDICATOR_17","INDICATOR_18","INDICATOR_19","INDICATOR_20","INDICATOR_21","INDICATOR_22","INDICATOR_23","INDICATOR_24","INDICATOR_25","INDICATOR_26"]
+codes = ["INDICATOR_1","INDICATOR_2","INDICATOR_3","INDICATOR_4","INDICATOR_5","INDICATOR_6","INDICATOR_7","INDICATOR_8","INDICATOR_9","INDICATOR_10","INDICATOR_11","INDICATOR_12","INDICATOR_13","INDICATOR_14","INDICATOR_15","INDICATOR_16","INDICATOR_17","INDICATOR_18","INDICATOR_19","INDICATOR_20","INDICATOR_21","INDICATOR_22","INDICATOR_23","INDICATOR_24","INDICATOR_25","INDICATOR_26","INDICATOR_27","INDICATOR_28","INDICATOR_29","INDICATOR_30","INDICATOR_31"]
 
 [INDICATOR_1]
-id = 21020-6121
+id = 21018-6125
 topic = LAND_USE
 tendency = INCREASE
-unit_name = Access to improved sanitation facilities (%)
+unit_name = Domestic food price index (index)
 unit_type = %
-name_en = Access to improved sanitation facilities (%)
-name_es = Access to improved sanitation facilities (%)
-name_fr = Access to improved sanitation facilities (%)
-desc_en = Access to improved sanitation facilities (%)
-desc_es = Access to improved sanitation facilities (%)
-desc_fr = Access to improved sanitation facilities (%)
-fao_item_code = 21020
-fao_element_code = 6121
+name_en = Domestic food price index (index)
+name_es = Domestic food price index (index) FIXME
+name_fr = Domestic food price index (index) FIXME
+desc_en = Domestic food price index (index) FIXME
+desc_es = Domestic food price index (index) FIXME
+desc_fr = Domestic food price index (index) FIXME
+fao_item_code = 21018
+fao_element_code = 6125
 
 [INDICATOR_2]
 id = 21004-6121
@@ -46,29 +46,28 @@ tendency = INCREASE
 unit_name = Prevalence of undernourishment (%) (3-year average)
 unit_type = %
 name_en = Prevalence of undernourishment (%) (3-year average)
-name_es = Prevalence of undernourishment (%) (3-year average)
-name_fr = Prevalence of undernourishment (%) (3-year average)
-desc_en = Prevalence of undernourishment (%) (3-year average)
-desc_es = Prevalence of undernourishment (%) (3-year average)
-desc_fr = Prevalence of undernourishment (%) (3-year average)
+name_es = Prevalence of undernourishment (%) (3-year average) FIXME
+name_fr = Prevalence of undernourishment (%) (3-year average) FIXME
+desc_en = Prevalence of undernourishment (%) (3-year average) FIXME
+desc_es = Prevalence of undernourishment (%) (3-year average) FIXME
+desc_fr = Prevalence of undernourishment (%) (3-year average) FIXME
 fao_item_code = 21004
 fao_element_code = 6121
 
 [INDICATOR_3]
-id = 22013-6126
+id = 21022-6121
 topic = LAND_USE
 tendency = INCREASE
-unit_name = Gross domestic product per capita, PPP (constant 2011 international $)
+unit_name = Share of food expenditure of the poor (%)
 unit_type = %
-name_en = Gross domestic product per capita, PPP (constant 2011 international $)
-name_es = Gross domestic product per capita, PPP (constant 2011 international $)
-name_fr = Gross domestic product per capita, PPP (constant 2011 international $)
-desc_en = Gross domestic product per capita, PPP (constant 2011 international $)
-desc_es = Gross domestic product per capita, PPP (constant 2011 international $)
-desc_fr = Gross domestic product per capita, PPP (constant 2011 international $)
-fao_item_code = 22013
-fao_element_code = 6126
-
+name_en = Share of food expenditure of the poor (%)
+name_es = Share of food expenditure of the poor (%) FIXME
+name_fr = Share of food expenditure of the poor (%) FIXME
+desc_en = Share of food expenditure of the poor (%) FIXME
+desc_es = Share of food expenditure of the poor (%) FIXME
+desc_fr = Share of food expenditure of the poor (%) FIXME
+fao_item_code = 21022
+fao_element_code = 6121
 
 [INDICATOR_4]
 id = 21023-6128
@@ -77,11 +76,11 @@ tendency = INCREASE
 unit_name = Depth of the food deficit (kcal/capita/day) (3-year average)
 unit_type = %
 name_en = Depth of the food deficit (kcal/capita/day) (3-year average)
-name_es = Depth of the food deficit (kcal/capita/day) (3-year average)
-name_fr = Depth of the food deficit (kcal/capita/day) (3-year average)
-desc_en = Depth of the food deficit (kcal/capita/day) (3-year average)
-desc_es = Depth of the food deficit (kcal/capita/day) (3-year average)
-desc_fr = Depth of the food deficit (kcal/capita/day) (3-year average)
+name_es = Depth of the food deficit (kcal/capita/day) (3-year average) FIXME
+name_fr = Depth of the food deficit (kcal/capita/day) (3-year average) FIXME
+desc_en = Depth of the food deficit (kcal/capita/day) (3-year average) FIXME
+desc_es = Depth of the food deficit (kcal/capita/day) (3-year average) FIXME
+desc_fr = Depth of the food deficit (kcal/capita/day) (3-year average) FIXME
 fao_item_code = 21023
 fao_element_code = 6128
 
@@ -93,46 +92,46 @@ tendency = INCREASE
 unit_name = Access to improved water sources (%)
 unit_type = %
 name_en = Access to improved water sources (%)
-name_es = Access to improved water sources (%)
-name_fr = Access to improved water sources (%)
-desc_en = Access to improved water sources (%)
-desc_es = Access to improved water sources (%)
-desc_fr = Access to improved water sources (%)
+name_es = Access to improved water sources (%) FIXME
+name_fr = Access to improved water sources (%) FIXME
+desc_en = Access to improved water sources (%) FIXME
+desc_es = Access to improved water sources (%) FIXME
+desc_fr = Access to improved water sources (%) FIXME
 fao_item_code = 21019
 fao_element_code = 6121
 
 
 [INDICATOR_6]
-id = 21007-6132
+id = 21020-6121
 topic = LAND_USE
 tendency = INCREASE
-unit_name = Number of severely food insecure people
+unit_name = Access to improved sanitation facilities (%)
 unit_type = %
-name_en = Number of severely food insecure people
-name_es = Number of severely food insecure people
-name_fr = Number of severely food insecure people
-desc_en = Number of severely food insecure people
-desc_es = Number of severely food insecure people
-desc_fr = Number of severely food insecure people
-fao_item_code = 21007
-fao_element_code = 6132
+name_en = Access to improved sanitation facilities (%)
+name_es = Access to improved sanitation facilities (%) FIXME
+name_fr = Access to improved sanitation facilities (%) FIXME
+desc_en = Access to improved sanitation facilities (%) FIXME
+desc_es = Access to improved sanitation facilities (%) FIXME
+desc_fr = Access to improved sanitation facilities (%) FIXME
+fao_item_code = 21020
+fao_element_code = 6121
 
 
 [INDICATOR_7]
-id = 21041-6121
+id = 6774-5110
 topic = LAND_USE
 tendency = INCREASE
 unit_name = Hectares
 unit_type = sq. km
 unit_factor = 10000
-name_en = Percentage of children under 5 years of age who are overweight
-name_es = Percentage of children under 5 years of age who are overweight
-name_fr = Percentage of children under 5 years of age who are overweight
-desc_en = Percentage of children under 5 years of age who are overweight
-desc_es = Percentage of children under 5 years of age who are overweight
-desc_fr = Percentage of children under 5 years of age who are overweight
-fao_item_code = 21041
-fao_element_code = 6121
+name_en = Average dietary energy supply adequacy (%) (3-year average)
+name_es = Area of arable land and permanent crops under protective cover
+name_fr = Area of arable land and permanent crops under protective cover
+desc_en = Area of arable land and permanent crops under protective cover
+desc_es = Area of arable land and permanent crops under protective cover
+desc_fr = Area of arable land and permanent crops under protective cover
+fao_item_code = 6774
+fao_element_code = 5110
 
 
 [INDICATOR_8]
@@ -221,37 +220,37 @@ fao_element_code = 6123
 
 
 [INDICATOR_13]
-id = 21032-6125
+id = 21015-6121
 topic = LAND_USE
 tendency = INCREASE
 unit_name = Hectares
 unit_type = sq. km
 unit_factor = 10000
-name_en = Political stability and absence of violence/terrorism (index)
-name_es = Political stability and absence of violence/terrorism (index)
-name_fr = Political stability and absence of violence/terrorism (index)
-desc_en = Political stability and absence of violence/terrorism (index)
-desc_es = Political stability and absence of violence/terrorism (index)
-desc_fr = Political stability and absence of violence/terrorism (index)
-fao_item_code = 21032
-fao_element_code = 6125
+name_en = Percentage of paved roads over total roads (%)
+name_es = Percentage of paved roads over total roads (%)
+name_fr = Percentage of paved roads over total roads (%)
+desc_en = Percentage of paved roads over total roads (%)
+desc_es = Percentage of paved roads over total roads (%)
+desc_fr = Percentage of paved roads over total roads (%)
+fao_item_code = 21015
+fao_element_code = 6121
 
 
 [INDICATOR_14]
-id = 21043-6121
+id = 21017-6124
 topic = LAND_USE
 tendency = INCREASE
 unit_name = Hectares
 unit_type = sq. km
 unit_factor = 10000
-name_en = Prevalence of anemia among women of reproductive age (15-49 years)
-name_es = Prevalence of anemia among women of reproductive age (15-49 years)
-name_fr = Prevalence of anemia among women of reproductive age (15-49 years)
-desc_en = Prevalence of anemia among women of reproductive age (15-49 years)
-desc_es = Prevalence of anemia among women of reproductive age (15-49 years)
-desc_fr = Prevalence of anemia among women of reproductive age (15-49 years)
-fao_item_code = 21043
-fao_element_code = 6121
+name_en = Road density (per 100 square km of land area)
+name_es = Road density (per 100 square km of land area)
+name_fr = Road density (per 100 square km of land area)
+desc_en = Road density (per 100 square km of land area)
+desc_es = Road density (per 100 square km of land area)
+desc_fr = Road density (per 100 square km of land area)
+fao_item_code = 21017
+fao_element_code = 6124
 
 
 [INDICATOR_15]
@@ -289,19 +288,19 @@ fao_element_code = 6132
 
 
 [INDICATOR_17]
-id = 21044-6121
+id = 21024-6121
 topic = LAND_USE
 tendency = INCREASE
 unit_name = Hectares
 unit_type = sq. km
 unit_factor = 10000
-name_en = Prevalence of exclusive breastfeeding among infants (0-5 months)
-name_es = Prevalence of exclusive breastfeeding among infants (0-5 months)
-name_fr = Prevalence of exclusive breastfeeding among infants (0-5 months)
-desc_en = Prevalence of exclusive breastfeeding among infants (0-5 months)
-desc_es = Prevalence of exclusive breastfeeding among infants (0-5 months)
-desc_fr = Prevalence of exclusive breastfeeding among infants (0-5 months)
-fao_item_code = 21044
+name_en = Prevalence of food inadequacy (%) (3-year average)
+name_es = Prevalence of food inadequacy (%) (3-year average)
+name_fr = Prevalence of food inadequacy (%) (3-year average)
+desc_en = Prevalence of food inadequacy (%) (3-year average)
+desc_es = Prevalence of food inadequacy (%) (3-year average)
+desc_fr = Prevalence of food inadequacy (%) (3-year average)
+fao_item_code = 21024
 fao_element_code = 6121
 
 
@@ -357,20 +356,20 @@ fao_element_code = 6121
 
 
 [INDICATOR_21]
-id = 21042-6121
+id = 21029-6125
 topic = LAND_USE
 tendency = INCREASE
 unit_name = Hectares
 unit_type = sq. km
 unit_factor = 10000
-name_en = Prevalence of obesity in the adult population (18 years and older)
-name_es = Prevalence of obesity in the adult population (18 years and older)
-name_fr = Prevalence of obesity in the adult population (18 years and older)
-desc_en = Prevalence of obesity in the adult population (18 years and older)
-desc_es = Prevalence of obesity in the adult population (18 years and older)
-desc_fr = Prevalence of obesity in the adult population (18 years and older)
-fao_item_code = 21042
-fao_element_code = 6121
+name_en = Domestic food price volatility (index)
+name_es = Domestic food price volatility (index)
+name_fr = Domestic food price volatility (index)
+desc_en = Domestic food price volatility (index)
+desc_es = Domestic food price volatility (index)
+desc_fr = Domestic food price volatility (index)
+fao_item_code = 21029
+fao_element_code = 6125
 
 
 [INDICATOR_22]
@@ -442,17 +441,103 @@ fao_element_code = 6121
 
 
 [INDICATOR_26]
-id = 21040-6121
+id = 21027-6121
 topic = LAND_USE
 tendency = INCREASE
 unit_name = Hectares
 unit_type = sq. km
 unit_factor = 10000
-name_en = Prevalence of severe food insecurity in the total population
-name_es = Prevalence of severe food insecurity in the total population
-name_fr = Prevalence of severe food insecurity in the total population
-desc_en = Prevalence of severe food insecurity in the total population
-desc_es = Prevalence of severe food insecurity in the total population
-desc_fr = Prevalence of severe food insecurity in the total population
-fao_item_code = 21040
+name_en = Percentage of children under 5 years of age who are underweight (%)
+name_es = Percentage of children under 5 years of age who are underweight (%)
+name_fr = Percentage of children under 5 years of age who are underweight (%)
+desc_en = Percentage of children under 5 years of age who are underweight (%)
+desc_es = Percentage of children under 5 years of age who are underweight (%)
+desc_fr = Percentage of children under 5 years of age who are underweight (%)
+fao_item_code = 21027
 fao_element_code = 6121
+
+
+[INDICATOR_27]
+id = 21028-6121
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Percentage of adults who are underweight (%)
+name_es = Percentage of adults who are underweight (%)
+name_fr = Percentage of adults who are underweight (%)
+desc_en = Percentage of adults who are underweight (%)
+desc_es = Percentage of adults who are underweight (%)
+desc_fr = Percentage of adults who are underweight (%)
+fao_item_code = 21028
+fao_element_code = 6121
+
+
+[INDICATOR_28]
+id = 21036-6121
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Prevalence of anaemia among children under 5 years of age (%)
+name_es = Prevalence of anaemia among children under 5 years of age (%)
+name_fr = Prevalence of anaemia among children under 5 years of age (%)
+desc_en = Prevalence of anaemia among children under 5 years of age (%)
+desc_es = Prevalence of anaemia among children under 5 years of age (%)
+desc_fr = Prevalence of anaemia among children under 5 years of age (%)
+fao_item_code = 21036
+fao_element_code = 6121
+
+
+[INDICATOR_29]
+id = 21039-6121
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Prevalence of anemia among pregnant women (%)
+name_es = Prevalence of anemia among pregnant women (%)
+name_fr = Prevalence of anemia among pregnant women (%)
+desc_en = Prevalence of anemia among pregnant women (%)
+desc_es = Prevalence of anemia among pregnant women (%)
+desc_fr = Prevalence of anemia among pregnant women (%)
+fao_item_code = 21039
+fao_element_code = 6121
+
+
+[INDICATOR_30]
+id = 21037-6121
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Prevalence of vitamin A deficiency in the population (%)
+name_es = Prevalence of vitamin A deficiency in the population (%)
+name_fr = Prevalence of vitamin A deficiency in the population (%)
+desc_en = Prevalence of vitamin A deficiency in the population (%)
+desc_es = Prevalence of vitamin A deficiency in the population (%)
+desc_fr = Prevalence of vitamin A deficiency in the population (%)
+fao_item_code = 21037
+fao_element_code = 6121
+
+
+[INDICATOR_31]
+id = 21038-6121
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = sq. km
+unit_factor = 10000
+name_en = Prevalence of iodine deficiency (%)
+name_es = Prevalence of iodine deficiency (%)
+name_fr = Prevalence of iodine deficiency (%)
+desc_en = Prevalence of iodine deficiency (%)
+desc_es = Prevalence of iodine deficiency (%)
+desc_fr = Prevalence of iodine deficiency (%)
+fao_item_code = 21038
+fao_element_code = 6121
+
