--- a/FAOSTAT-Norm_Importer/config/configuration-Food_security.ini
+++ b/FAOSTAT-Norm_Importer/config/configuration-Food_security.ini
@@ -22,22 +22,7 @@ name = FAO - Statistics Division
 datasource_id = FS
 
 [INDICATORS]
-codes = ["INDICATOR_1","INDICATOR_2","INDICATOR_3","INDICATOR_4","INDICATOR_5","INDICATOR_6","INDICATOR_7","INDICATOR_8","INDICATOR_9","INDICATOR_10","INDICATOR_11","INDICATOR_12","INDICATOR_13","INDICATOR_14","INDICATOR_15","INDICATOR_16","INDICATOR_17","INDICATOR_18","INDICATOR_19","INDICATOR_20","INDICATOR_21","INDICATOR_22","INDICATOR_23","INDICATOR_24","INDICATOR_25","INDICATOR_26"]
-
-[INDICATOR_1]
-id = 21020-6121
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Access to improved sanitation facilities (%)
-unit_type = %
-name_en = Access to improved sanitation facilities (%)
-name_es = Access to improved sanitation facilities (%)
-name_fr = Access to improved sanitation facilities (%)
-desc_en = Access to improved sanitation facilities (%)
-desc_es = Access to improved sanitation facilities (%)
-desc_fr = Access to improved sanitation facilities (%)
-fao_item_code = 21020
-fao_element_code = 6121
+codes = ["INDICATOR_2","INDICATOR_3","INDICATOR_6","INDICATOR_7","INDICATOR_8","INDICATOR_9","INDICATOR_10","INDICATOR_11","INDICATOR_12","INDICATOR_13","INDICATOR_14","INDICATOR_15","INDICATOR_16","INDICATOR_17","INDICATOR_18","INDICATOR_19","INDICATOR_20","INDICATOR_21","INDICATOR_22","INDICATOR_23","INDICATOR_24","INDICATOR_25","INDICATOR_26"]
 
 [INDICATOR_2]
 id = 21004-6121
@@ -68,39 +53,6 @@ desc_es = Gross domestic product per capita, PPP (constant 2011 international $)
 desc_fr = Gross domestic product per capita, PPP (constant 2011 international $)
 fao_item_code = 22013
 fao_element_code = 6126
-
-
-[INDICATOR_4]
-id = 21023-6128
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Depth of the food deficit (kcal/capita/day) (3-year average)
-unit_type = %
-name_en = Depth of the food deficit (kcal/capita/day) (3-year average)
-name_es = Depth of the food deficit (kcal/capita/day) (3-year average)
-name_fr = Depth of the food deficit (kcal/capita/day) (3-year average)
-desc_en = Depth of the food deficit (kcal/capita/day) (3-year average)
-desc_es = Depth of the food deficit (kcal/capita/day) (3-year average)
-desc_fr = Depth of the food deficit (kcal/capita/day) (3-year average)
-fao_item_code = 21023
-fao_element_code = 6128
-
-
-[INDICATOR_5]
-id = 21019-6121
-topic = LAND_USE
-tendency = INCREASE
-unit_name = Access to improved water sources (%)
-unit_type = %
-name_en = Access to improved water sources (%)
-name_es = Access to improved water sources (%)
-name_fr = Access to improved water sources (%)
-desc_en = Access to improved water sources (%)
-desc_es = Access to improved water sources (%)
-desc_fr = Access to improved water sources (%)
-fao_item_code = 21019
-fao_element_code = 6121
-
 
 [INDICATOR_6]
 id = 21007-6132
