--- a/FAOSTAT-Norm_Importer/config/configuration-Food_security.ini
+++ b/FAOSTAT-Norm_Importer/config/configuration-Food_security.ini
@@ -25,7 +25,7 @@ datasource_id = FS
 codes = ["INDICATOR_2","INDICATOR_3","INDICATOR_6","INDICATOR_7","INDICATOR_8","INDICATOR_9","INDICATOR_10","INDICATOR_11","INDICATOR_12","INDICATOR_13","INDICATOR_14","INDICATOR_15","INDICATOR_16","INDICATOR_17","INDICATOR_18","INDICATOR_19","INDICATOR_20","INDICATOR_21","INDICATOR_22","INDICATOR_23","INDICATOR_24","INDICATOR_25","INDICATOR_26"]
 
 [INDICATOR_2]
-id = 21004-6121
+id = 210041-6121
 topic = LAND_USE
 tendency = INCREASE
 unit_name = Prevalence of undernourishment (%) (3-year average)
@@ -36,7 +36,7 @@ name_fr = Prevalence of undernourishment (%) (3-year average)
 desc_en = Prevalence of undernourishment (%) (3-year average)
 desc_es = Prevalence of undernourishment (%) (3-year average)
 desc_fr = Prevalence of undernourishment (%) (3-year average)
-fao_item_code = 21004
+fao_item_code = 210041
 fao_element_code = 6121
 
 [INDICATOR_3]
@@ -55,18 +55,18 @@ fao_item_code = 22013
 fao_element_code = 6126
 
 [INDICATOR_6]
-id = 21007-6132
+id = 210071-6132
 topic = LAND_USE
 tendency = INCREASE
-unit_name = Number of severely food insecure people
+unit_name = Number of severely food insecure people (million) (3-year average)
 unit_type = %
-name_en = Number of severely food insecure people
-name_es = Number of severely food insecure people
-name_fr = Number of severely food insecure people
-desc_en = Number of severely food insecure people
-desc_es = Number of severely food insecure people
-desc_fr = Number of severely food insecure people
-fao_item_code = 21007
+name_en = Number of severely food insecure people (million) (3-year average)
+name_es = Number of severely food insecure people (million) (3-year average)
+name_fr = Number of severely food insecure people (million) (3-year average)
+desc_en = Number of severely food insecure people (million) (3-year average)
+desc_es = Number of severely food insecure people (million) (3-year average)
+desc_fr = Number of severely food insecure people (million) (3-year average)
+fao_item_code = 210071
 fao_element_code = 6132
 
 
@@ -224,19 +224,19 @@ fao_element_code = 6124
 
 
 [INDICATOR_16]
-id = 21001-6132
+id = 210011-6132
 topic = LAND_USE
 tendency = INCREASE
 unit_name = Hectares
 unit_type = sq. km
 unit_factor = 10000
-name_en = Number of people undernourished (millions) (3-year average)
-name_es = Number of people undernourished (millions) (3-year average)
-name_fr = Number of people undernourished (millions) (3-year average)
-desc_en = Number of people undernourished (millions) (3-year average)
-desc_es = Number of people undernourished (millions) (3-year average)
-desc_fr = Number of people undernourished (millions) (3-year average)
-fao_item_code = 21001
+name_en = Number of people undernourished (million) (3-year average)
+name_es = Number of people undernourished (million) (3-year average)
+name_fr = Number of people undernourished (million) (3-year average)
+desc_en = Number of people undernourished (million) (3-year average)
+desc_es = Number of people undernourished (million) (3-year average)
+desc_fr = Number of people undernourished (million) (3-year average)
+fao_item_code = 210011
 fao_element_code = 6132
 
 
@@ -394,7 +394,7 @@ fao_element_code = 6121
 
 
 [INDICATOR_26]
-id = 21040-6121
+id = 210401-6121
 topic = LAND_USE
 tendency = INCREASE
 unit_name = Hectares
@@ -406,5 +406,5 @@ name_fr = Prevalence of severe food insecurity in the total population
 desc_en = Prevalence of severe food insecurity in the total population
 desc_es = Prevalence of severe food insecurity in the total population
 desc_fr = Prevalence of severe food insecurity in the total population
-fao_item_code = 21040
+fao_item_code = 210401
 fao_element_code = 6121
