Added 4 new indicators for FAO-FS

--- a/FAOSTAT-Norm_Importer/config/configuration-Food_security.ini
+++ b/FAOSTAT-Norm_Importer/config/configuration-Food_security.ini
@@ -22,13 +22,13 @@ name = FAO - Statistics Division
 datasource_id = FS
 
 [INDICATORS]
-codes = ["INDICATOR_2","INDICATOR_3","INDICATOR_6","INDICATOR_7","INDICATOR_8","INDICATOR_9","INDICATOR_10","INDICATOR_11","INDICATOR_12","INDICATOR_13","INDICATOR_14","INDICATOR_15","INDICATOR_16","INDICATOR_17","INDICATOR_18","INDICATOR_19","INDICATOR_20","INDICATOR_21","INDICATOR_22","INDICATOR_23","INDICATOR_24","INDICATOR_25","INDICATOR_26"]
+codes = ["INDICATOR_2","INDICATOR_3","INDICATOR_6","INDICATOR_7","INDICATOR_8","INDICATOR_9","INDICATOR_10","INDICATOR_11","INDICATOR_12","INDICATOR_13","INDICATOR_14","INDICATOR_15","INDICATOR_16","INDICATOR_17","INDICATOR_18","INDICATOR_19","INDICATOR_20","INDICATOR_21","INDICATOR_22","INDICATOR_23","INDICATOR_24","INDICATOR_25","INDICATOR_26","INDICATOR_27","INDICATOR_28","INDICATOR_29","INDICATOR_30"]
 
 [INDICATOR_2]
 id = 210041-6121
 topic = LAND_USE
 tendency = INCREASE
-unit_name = Prevalence of undernourishment (%) (3-year average)
+unit_name = Percentage
 unit_type = %
 name_en = Prevalence of undernourishment (%) (3-year average)
 name_es = Prevalence of undernourishment (%) (3-year average)
@@ -363,7 +363,7 @@ fao_element_code = 6128
 id = 21026-6121
 topic = LAND_USE
 tendency = INCREASE
-unit_name = Hectares
+unit_name = Percentage
 unit_type = sq. km
 unit_factor = 10000
 name_en = Percentage of children under 5 years of age affected by wasting (%)
@@ -408,3 +408,65 @@ desc_es = Prevalence of severe food insecurity in the total population
 desc_fr = Prevalence of severe food insecurity in the total population
 fao_item_code = 210401
 fao_element_code = 6121
+
+[INDICATOR_27]
+id = 21045-6121
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = %
+name_en = Percentage of population using safely managed drinking water services (%)
+name_es = Percentage of population using safely managed drinking water services (%)
+name_fr = Percentage of population using safely managed drinking water services (%)
+desc_en = Percentage of population using safely managed drinking water services (%)
+desc_es = Percentage of population using safely managed drinking water services (%)
+desc_fr = Percentage of population using safely managed drinking water services (%)
+fao_item_code = 21045
+fao_element_code = 6121
+
+[INDICATOR_28]
+id = 21046-6121
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = %
+name_en = Percentage of population using safely managed sanitation services (%)
+name_es = Percentage of population using safely managed sanitation services (%)
+name_fr = Percentage of population using safely managed sanitation services (%)
+desc_en = Percentage of population using safely managed sanitation services (%)
+desc_es = Percentage of population using safely managed sanitation services (%)
+desc_fr = Percentage of population using safely managed sanitation services (%)
+fao_item_code = 21046
+fao_element_code = 6121
+
+[INDICATOR_29]
+id = 21047-6121
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = %
+name_en = Percentage of population using at least basic drinking water services (%)
+name_es = Percentage of population using at least basic drinking water services (%)
+name_fr = Percentage of population using at least basic drinking water services (%)
+desc_en = Percentage of population using at least basic drinking water services (%)
+desc_es = Percentage of population using at least basic drinking water services (%)
+desc_fr = Percentage of population using at least basic drinking water services (%)
+fao_item_code = 21047
+fao_element_code = 6121
+
+
+[INDICATOR_30]
+id = 21048-6121
+topic = LAND_USE
+tendency = INCREASE
+unit_name = Hectares
+unit_type = %
+name_en = Percentage of population using at least basic sanitation services (%)
+name_es = Percentage of population using at least basic sanitation services (%)
+name_fr = Percentage of population using at least basic sanitation services (%)
+desc_en = Percentage of population using at least basic sanitation services (%)
+desc_es = Percentage of population using at least basic sanitation services (%)
+desc_fr = Percentage of population using at least basic sanitation services (%)
+fao_item_code = 21048
+fao_element_code = 6121
+
