updated code for Cropland 6620

--- a/FAOSTAT-Norm_Importer/config/configuration-land.ini
+++ b/FAOSTAT-Norm_Importer/config/configuration-land.ini
@@ -218,12 +218,12 @@ tendency = INCREASE
 unit_name = Hectares
 unit_type = sq. km
 unit_factor = 10000
-name_en = Arable land and Permanent crops
-name_es = Arable land and Permanent crops
-name_fr = Arable land and Permanent crops
-desc_en = Arable land and Permanent crops
-desc_es = Arable land and Permanent crops
-desc_fr = Arable land and Permanent crops
+name_en = Cropland
+name_es = Cropland
+name_fr = Cropland
+desc_en = Cropland
+desc_es = Cropland
+desc_fr = Cropland
 fao_item_code = 6620
 fao_element_code = 5110
 
@@ -596,11 +596,11 @@ tendency = INCREASE
 unit_name = Hectares
 unit_type = sq. km
 unit_factor = 10000
-name_en = Area of arable land and permanent crops under protective cover
-name_es = Area of arable land and permanent crops under protective cover
-name_fr = Area of arable land and permanent crops under protective cover
-desc_en = Area of arable land and permanent crops under protective cover
-desc_es = Area of arable land and permanent crops under protective cover
-desc_fr = Area of arable land and permanent crops under protective cover
+name_en = Cropland area under protective cover
+name_es = Cropland area under protective cover
+name_fr = Cropland area under protective cover
+desc_en = Cropland area under protective cover
+desc_es = Cropland area under protective cover
+desc_fr = Cropland area under protective cover
 fao_item_code = 6774
 fao_element_code = 5110
