updated code for Land with temporary fallow 6640

--- a/FAOSTAT-Norm_Importer/config/configuration-land.ini
+++ b/FAOSTAT-Norm_Importer/config/configuration-land.ini
@@ -266,12 +266,12 @@ tendency = INCREASE
 unit_name = Hectares
 unit_type = sq. km
 unit_factor = 10000
-name_en = Fallow land (temporary)
-name_es = Fallow land (temporary)
-name_fr = Fallow land (temporary)
-desc_en = Fallow land (temporary)
-desc_es = Fallow land (temporary)
-desc_fr = Fallow land (temporary)
+name_en = Land with temporary fallow
+name_es = Land with temporary fallow
+name_fr = Land with temporary fallow
+desc_en = Land with temporary fallow
+desc_es = Land with temporary fallow
+desc_fr = Land with temporary fallow
 fao_item_code = 6640
 fao_element_code = 5110
 
