updated code for Land under temporary crops 6630

--- a/FAOSTAT-Norm_Importer/config/configuration-land.ini
+++ b/FAOSTAT-Norm_Importer/config/configuration-land.ini
@@ -234,12 +234,12 @@ tendency = INCREASE
 unit_name = Hectares
 unit_type = sq. km
 unit_factor = 10000
-name_en = Temporary crops
-name_es = Temporary crops
-name_fr = Temporary crops
-desc_en = Temporary crops
-desc_es = Temporary crops
-desc_fr = Temporary crops
+name_en = Land under temporary crops
+name_es = Land under temporary crops
+name_fr = Land under temporary crops
+desc_en = Land under temporary crops
+desc_es = Land under temporary crops
+desc_fr = Land under temporary crops
 fao_item_code = 6630
 fao_element_code = 5110
 
