updated code for Land under permanent crops 6650

--- a/FAOSTAT-Norm_Importer/config/configuration-land.ini
+++ b/FAOSTAT-Norm_Importer/config/configuration-land.ini
@@ -136,12 +136,12 @@ tendency = INCREASE
 unit_name = Hectares
 unit_type = sq. km
 unit_factor = 10000
-name_en = Permanent crops FIXME
-name_es = Permanent crops FIXME
-name_fr = Permanent crops FIXME
-desc_en = Permanent crops FIXME
-desc_es = Permanent crops FIXME
-desc_fr = Permanent crops FIXME
+name_en = Land under permanent crops
+name_es = Land under permanent crops
+name_fr = Land under permanent crops
+desc_en = Land under permanent crops
+desc_es = Land under permanent crops
+desc_fr = Land under permanent crops
 fao_item_code = 6650
 fao_element_code = 5110
 
