updated code for Land under perm. meadows and pastures 6655

--- a/FAOSTAT-Norm_Importer/config/configuration-land.ini
+++ b/FAOSTAT-Norm_Importer/config/configuration-land.ini
@@ -152,12 +152,12 @@ tendency = INCREASE
 unit_name = Hectares
 unit_type = sq. km
 unit_factor = 10000
-name_en = Permanent meadows and pastures FIXME
-name_es = Permanent meadows and pastures FIXME
-name_fr = Permanent meadows and pastures FIXME
-desc_en = Permanent meadows and pastures FIXME
-desc_es = Permanent meadows and pastures FIXME
-desc_fr = Permanent meadows and pastures FIXME
+name_en = Land under perm. meadows and pastures
+name_es = Land under perm. meadows and pastures
+name_fr = Land under perm. meadows and pastures
+desc_en = Land under perm. meadows and pastures
+desc_es = Land under perm. meadows and pastures
+desc_fr = Land under perm. meadows and pastures
 fao_item_code = 6655
 fao_element_code = 5110
 
