updated code for Land under temp. meadows and pastures 6633

--- a/FAOSTAT-Norm_Importer/config/configuration-land.ini
+++ b/FAOSTAT-Norm_Importer/config/configuration-land.ini
@@ -250,12 +250,12 @@ tendency = INCREASE
 unit_name = Hectares
 unit_type = sq. km
 unit_factor = 10000
-name_en = Temporary meadows and pastures
-name_es = Temporary meadows and pastures
-name_fr = Temporary meadows and pastures
-desc_en = Temporary meadows and pastures
-desc_es = Temporary meadows and pastures
-desc_fr = Temporary meadows and pastures
+name_en = Land under temp. meadows and pastures
+name_es = Land under temp. meadows and pastures
+name_fr = Land under temp. meadows and pastures
+desc_en = Land under temp. meadows and pastures
+desc_es = Land under temp. meadows and pastures
+desc_fr = Land under temp. meadows and pastures
 fao_item_code = 6633
 fao_element_code = 5110
 
