updated code for Inland waters 6680

--- a/FAOSTAT-Norm_Importer/config/configuration-land.ini
+++ b/FAOSTAT-Norm_Importer/config/configuration-land.ini
@@ -464,12 +464,12 @@ tendency = INCREASE
 unit_name = Hectares
 unit_type = sq. km
 unit_factor = 10000
-name_en = Inland water
-name_es = Inland water
-name_fr = Inland water
-desc_en = Inland water
-desc_es = Inland water
-desc_fr = Inland water
+name_en = Inland waters
+name_es = Inland waters
+name_fr = Inland waters
+desc_en = Inland waters
+desc_es = Inland waters
+desc_fr = Inland waters
 fao_item_code = 6680
 fao_element_code = 5110
 
