updated code for Land area equipped for irrigation 6690

--- a/FAOSTAT-Norm_Importer/config/configuration-land.ini
+++ b/FAOSTAT-Norm_Importer/config/configuration-land.ini
@@ -532,12 +532,12 @@ tendency = INCREASE
 unit_name = Hectares
 unit_type = sq. km
 unit_factor = 10000
-name_en = Total area equipped for irrigation
-name_es = Total area equipped for irrigation
-name_fr = Total area equipped for irrigation
-desc_en = Total area equipped for irrigation
-desc_es = Total area equipped for irrigation
-desc_fr = Total area equipped for irrigation
+name_en = Land area equipped for irrigation
+name_es = Land area equipped for irrigation
+name_fr = Land area equipped for irrigation
+desc_en = Land area equipped for irrigation
+desc_es = Land area equipped for irrigation
+desc_fr = Land area equipped for irrigation
 fao_item_code = 6690
 fao_element_code = 5110
 
