updated code for Agriculture area under organic agric. code 6671

--- a/FAOSTAT-Norm_Importer/config/configuration-land.ini
+++ b/FAOSTAT-Norm_Importer/config/configuration-land.ini
@@ -168,12 +168,12 @@ tendency = INCREASE
 unit_name = Hectares
 unit_type = sq. km
 unit_factor = 10000
-name_en = Agricultural area organic, total FIXME
-name_es = Agricultural area organic, total FIXME
-name_fr = Agricultural area organic, total FIXME
-desc_en = Agricultural area organic, total FIXME
-desc_es = Agricultural area organic, total FIXME
-desc_fr = Agricultural area organic, total FIXME
+name_en = Agriculture area under organic agric.
+name_es = Agriculture area under organic agric.
+name_fr = Agriculture area under organic agric.
+desc_en = Agriculture area under organic agric.
+desc_es = Agriculture area under organic agric.
+desc_fr = Agriculture area under organic agric.
 fao_item_code = 6671
 fao_element_code = 5110
 
