updated code for Permanent meadows & pastures area under organic agriculture code 6681

--- a/FAOSTAT-Norm_Importer/config/configuration-land.ini
+++ b/FAOSTAT-Norm_Importer/config/configuration-land.ini
@@ -481,12 +481,12 @@ tendency = INCREASE
 unit_name = Hectares
 unit_type = sq. km
 unit_factor = 10000
-name_en = Permanent meadows and pastures organic, total
-name_es = Permanent meadows and pastures organic, total
-name_fr = Permanent meadows and pastures organic, total
-desc_en = Permanent meadows and pastures organic, total
-desc_es = Permanent meadows and pastures organic, total
-desc_fr = Permanent meadows and pastures organic, total
+name_en = Permanent meadows & pastures area under organic agriculture
+name_es = Permanent meadows & pastures area under organic agriculture
+name_fr = Permanent meadows & pastures area under organic agriculture
+desc_en = Permanent meadows & pastures area under organic agriculture
+desc_es = Permanent meadows & pastures area under organic agriculture
+desc_fr = Permanent meadows & pastures area under organic agriculture
 fao_item_code = 6681
 fao_element_code = 5110
 
